Track bonded-role lockups independently
A role had exactly one bond, chosen from the lockups carrying its role
hash. Because publishing a lockup is permissionless, that made a third
party's lockup able to change the role holder's bond state, and it hid
the real lifecycle of every lockup which was not selected.

There is no reason to select. Build one BondedRole per valid role lockup,
each with its own lifecycle, plus one READY_FOR_LOCKUP entry for an
accepted role which has no valid lockup yet. Unlocking, illegally
spending or confiscating one lockup then changes only that lockup, and
several confirmed lockups for one role coexist without precedence.

Pending wallet states are applied per lockup afterwards, using the exact
lockup transaction id, and the whole collection is rebuilt from DAO state
on every update and cleared if a rebuild fails.